# gnomon

./: .gitignore  CONTEXT.md  LICENSE  README.md  paxel.py  progress_server.py  pyproject.toml  xl_ai_insights.py
.github/workflows/: ci.yml  release.yml
docs/: metrics-by-source.md  metrics-evaluation.md  scoring-philosophy.md  scoring-v5-technical-review.md  security-and-compliance.md
docs/adr/: 0001-paxel-stays-single-file.md
docs/plans/: 2026-06-17-event-accumulator-and-stats.md
gnomon/: config.py  taxonomy.py
gnomon/analysis/: churn.py  metrics.py  quotes.py
gnomon/cli/: accumulator.py  insights.py  local.py  scoring_inputs.py
gnomon/output/: narrative.py  planning_explain.py  profile_html.py  report.py  source_usage.py  summary.py
gnomon/scoring/: aggregate.py  aq.py  archetype.py  gstack.py  inputs.py  insights.py  profiles.py  versioning.py
gnomon/sources/: __init__.py  _util.py  codex.py  (+6 more)
tests/: _scoring_vectors_cases.py  fixture_dirs.py  gen_scoring_vectors.py  test_accumulator.py  test_auto_upload.py  test_backfill.py  test_cursor_discovery.py  test_cursor_metrics.py  test_date_window.py  test_documentation_contract.py  test_dry_run.py  test_event_accumulator.py  test_gnomon.py  test_golden_profile.py  test_golden_stats.py  test_monthly_mode.py  test_planning_explain.py  test_planning_session_scope.py  test_progress_server.py  test_release_workflow.py  test_rolling_aq.py  test_scoring_inputs_by_source.py  test_scoring_v5.py  test_scoring_vectors.py  test_skill_recognition.py  test_smoke.py  test_source_metrics_fixes.py  test_source_reconciliation.py  test_stats_shape.py  test_structured_profile.py  test_summary_source_profiles.py  test_taxonomy.py  test_token_usage.py  test_window_flag.py  test_xl_ai_insights.py
(+33 files in other folders)
